<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="ua.com.kl.yuri.justjava.MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:padding="16dp"
            android:text="@string/topping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <CheckBox
                android:id="@+id/checkbox_whipped_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonChoiceCream"
                android:paddingLeft="6dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <CheckBox
                android:id="@+id/checkbox_chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonChoiceChoco"
                android:paddingLeft="6dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:padding="16dp"
            android:text="@string/quantity_is" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrementOrder"
                android:text="-"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="1"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="incrementOrder"
                android:text="+"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_preview"
                android:textAllCaps="false"
                android:textColor="#b2b0b0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 5"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" $"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:text="Order summary:"-->
        <!--android:textSize="20sp"-->
        <!--android:textAllCaps="true" />-->

        <!--<TextView-->
        <!--android:id="@+id/order_summary_text_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:text="$ 0.00"-->
        <!--android:textSize="18sp"-->
        <!--android:textStyle="bold"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/order"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
